Revert "Consistent-Spacing Fix"
This reverts commit 5d862d0bb624e092d2b0ad797aeb59e5b862f99c.

--- a/frontend/src/components/common/smart/topViewBtns/TopViewBtns.scss
+++ b/frontend/src/components/common/smart/topViewBtns/TopViewBtns.scss
@@ -16,6 +16,7 @@
     .btn-add {
       min-width: 50px;
       width: 50px;
+      margin-left: 5px;
     }
     .show-hide {
       display: none;
@@ -25,6 +26,7 @@
     .btn-add {
       min-width: 50px;
       width: 50px;
+      margin-left: 5px;
     }
     .show-hide {
       display: none;
